# zero_2_prod_newsletter

./: .gitlab-ci.yml  Cargo.toml  Dockerfile
.cargo/: audit.toml
.github/workflows/: audit-on-push.yml  general.yml  scheduled-audit.yml
configurations/: base.yml  local.yml  production.yml
migrations/: 20210810013014_add_status_to_subscriptions.sql  20210810014320_make_status_not_null_in_subscriptions.sql  20210810014719_create_subscription_tokens_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs  subscriptions_confirm.rs
