[package]
name = "zero2prod"
version = "0.1.0"
authors = ["manuelvargastapia <manuelvargastapia@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# We're using the beta release to get tokio 1.x.x
actix-web = "4.0.0-beta.4"
